--- a/index.html
+++ b/index.html
@@ -63,20 +63,17 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/344/external-coding-interface-kiranshastry-lineal-color-kiranshastry.png" /></div>
           <h2>Kodowanie</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>Od pewnego czasu zacząłem się interesować kodowaniem. Moimi pierwszymy projektami były BOT'y na aplikację Discord. Później kalkulator, a teraz strona internetowa.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/344/external-graphic-design-graph-design-kiranshastry-lineal-color-kiranshastry-4.png" /></div>
           <h2>Grafiki komputerowe</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>Jestem na kierunku technika reklamy, więc z grafiką komputerową mam praktycznie do czynienia codziennie. Planuję pójść na studia z grafiki komputerowaej albo z programowania.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/344/external-web-design-graph-design-kiranshastry-lineal-color-kiranshastry.png" /></div>
           <h2>Strony Internetowe</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>Po wykonaniu pierwszej strony internetowej bardzo mi się to spodobało. Zaczałem planować i uczyć się o tworzeniu stron internetowych.</p>
         </div>
       </div>
     </div>
